mimir/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mimir
  namespace: mimir
spec:
  tls:
  - hosts:
      - mimir.lab.home
    secretName: mimir-tls
  rules:
  - host: mimir.lab.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mimir
            port:
              number: 8080
